--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     ],
     "website": "https://github.com/NemasisDarkX/Tohka#readme",
     "repository": "https://github.com/NemasisDarkX/Tohka.git",
-    "logo": "https://wallpaperaccess.com/full/944837.jpg",
+    "logo": "https://c.tenor.com/NvTYST4buVkAAAAC/tohka-yatogami.gif",
     "success_url": "/",
     "env": {
         "PREFIX": {
