--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     ],
     "website": "https://github.com/NemasisDarkX/Tohka#readme",
     "repository": "https://github.com/NemasisDarkX/Tohka.git",
-    "logo": "https://c.tenor.com/NvTYST4buVkAAAAC/tohka-yatogami.gif",
+    "logo": "https://pin.it/PORArAG",
     "success_url": "/",
     "env": {
         "PREFIX": {
