--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     ],
     "website": "https://github.com/NemasisDarkX/Tohka#readme",
     "repository": "https://github.com/NemasisDarkX/Tohka.git",
-    "logo": "https://pin.it/PORArAG",
+    "logo": "https://i.pinimg.com/originals/b0/fe/9c/b0fe9c3497eee7e8319d90a1e703fbd3.gif",
     "success_url": "/",
     "env": {
         "PREFIX": {
