--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
         "whatsapp-sticker-bot",
         "whatsapp-botto"
     ],
+    "Owner":"https://github.com/NemasisDarkX"
     "website": "https://github.com/NemasisDarkX/Tohka#readme",
     "repository": "https://github.com/NemasisDarkX/Tohka.git",
     "logo": "https://i.pinimg.com/originals/b0/fe/9c/b0fe9c3497eee7e8319d90a1e703fbd3.gif",
