--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "TOHKA",
-    "description": "Maintained Fork of Void",
+    "description": "Maintained Fork of Void Edited By https://github.com/NemasisDarkX",
     "keywords": [
         "bot",
         "whatsapp",
@@ -11,7 +11,6 @@
         "whatsapp-sticker-bot",
         "whatsapp-botto"
     ],
-    "website":"https://github.com/NemasisDarkX"
     "website": "https://github.com/NemasisDarkX/Tohka#readme",
     "repository": "https://github.com/NemasisDarkX/Tohka.git",
     "logo": "https://i.pinimg.com/originals/b0/fe/9c/b0fe9c3497eee7e8319d90a1e703fbd3.gif",
