--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/fs-extra": "^9.0.11",
         "@types/gifencoder": "^2.0.1",
         "@types/node": "^15.0.2",
+        "@types/yt-search": "^2.3.0",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
         "@typescript-eslint/parser": "^4.22.1",
         "eslint": "^7.26.0",
@@ -98,6 +99,8 @@
         "vtuber-wiki": "^1.1.5",
         "wa-sticker-formatter": "^4.3.2",
         "wikipedia": "^1.1.6",
+        "yt-search": "^2.10.3",
+        "ytdl-core": "^4.10.1",
         "yuri-canvas": "^4.0.6"
     }
 }
